add get All Chains endpoint
