# app/Http/Resources/ChainResourse.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class ChainResourse extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        $user = $request->user();
+
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            $this->mergeWhen($user && ($user->hasRole('superadmin') || $user->hasRole('admin_chain')), [
+                'status' => $this->whenLoaded('status', fn() => $this->status->name)
+            ]),
+            'created_at' => $this->created_at->format('d.m.Y H:i:s'),
+            'updated_at' => $this->updated_at->format('d.m.Y H:i:s'),
+        ];
+    }
+}
